--- a/sourceapp/requirements.txt
+++ b/sourceapp/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 Django==5.1.6
 django-allauth==65.7.0
 django-ckeditor==6.7.2
+django-cors-headers==4.7.0
 django-js-asset==3.0.1
 django-oauth-toolkit==3.0.1
 django-rest-framework-social-oauth2==1.2.0
